--- a/tox.ini
+++ b/tox.ini
@@ -112,7 +112,7 @@ commands =
 [testenv:changelog]
 extras = docs
 allowlist_externals = towncrier
-commands = towncrier build --version main --draft
+commands = towncrier build {posargs:--version main --draft}
 
 [testenv:release]
 description = do a release, required posarg of the version number
