--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -35,29 +35,32 @@ jobs:
     name: Define tag
     # tag a release after a release PR was accepted
     runs-on: ubuntu-latest
-    env:
-      RELEASE_VERSION: ''
     steps:
       - if: github.event_name == 'workflow_dispatch'
         name: from workflow_dispatch
         env:
           RELEASE_VERSION: ${{ inputs.version }}
-        run: TRUE
+        run: |
+          echo "RELEASE_VERSION=${RELEASE_VERSION}" >> $GITHUB_ENV
       - if: |
-          github.repository == 'Diaoul/subliminal'
-          && github.event_name == 'pull_request'
+          github.event_name == 'pull_request'
           && github.event.action == 'closed'
+          github.event_name == 'pull_request'
           && github.event.pull_request.merged == true
           && github.event.pull_request.head.repo.full_name == github.repository
           && contains(github.event.pull_request.labels.*.name, 'type/release')
           && startsWith(github.head_ref, 'releases/')
         name: from merged PR
         run: |
-          echo "RELEASE_VERSION=${GITHUB_HEAD_REF#release-}" >> $GITHUB_ENV
-      - run: echo "$RELEASE_VERSION"
-
+          echo "RELEASE_VERSION=${GITHUB_HEAD_REF#releases/}" >> $GITHUB_ENV
+      - name: set output
+        id: set-output
+        env:
+          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
+        run: |
+          echo "::set-output name=RELEASE_VERSION::$RELEASE_VERSION"
     outputs:
-      tag: $RELEASE_VERSION
+      tag: ${{ steps.set-output.outputs.RELEASE_VERSION }}
 
   tag-and-release:
     name: Tag and publish a release draft
@@ -66,9 +69,9 @@ jobs:
     permissions:
       id-token: write
       contents: write
-    if: ${{ define-tag.outputs.tag != ''}}
+    if: ${{ needs.define-tag.outputs.tag != '' }}
     env:
-      RELEASE_VERSION: ${{ define-tag.outputs.tag }}
+      RELEASE_VERSION: ${{ needs.define-tag.outputs.tag }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -77,7 +80,7 @@ jobs:
 
       - name: Tag the commit
         run: |
-          echo Release version: $RELEASE_VERSION
+          echo "Release version: $RELEASE_VERSION"
           git config user.name 'github-actions[bot]'
           git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
           git tag --annotate --message="Release version $RELEASE_VERSION" $RELEASE_VERSION ${{ github.sha }}
