--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -57,7 +57,7 @@ jobs:
         env:
           RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
         run: |
-          echo "::set-output name=RELEASE_VERSION::$RELEASE_VERSION"
+          echo "RELEASE_VERSION=$RELEASE_VERSION" >> $GITHUB_OUTPUT
     outputs:
       tag: ${{ steps.set-output.outputs.RELEASE_VERSION }}
 
