--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ tests = [
     "sympy",
     "colorama",  # used in scripts/
     "vcrpy>=5",  # keep synchronized with docs dependencies
-    "win32-setctime",
+    "win32-setctime; sys_platform=='win32'",
     "importlib_metadata>=4.6; python_version<'3.10'",
 ]
 types = [
