--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ tests = [
     "pytest-xdist",
     "sympy",
     "colorama",  # used in scripts/
+    "pypandoc",  # used in scripts/
     "vcrpy>=5",  # keep synchronized with docs dependencies
     "win32-setctime; sys_platform=='win32'",
     "importlib_metadata>=4.6; python_version<'3.10'",
