--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Generate Release Notes
         env:
-          RELEASE_VERSION: ${{ steps.baipp.outputs.package_version }} }}
+          RELEASE_VERSION: ${{ steps.baipp.outputs.package_version }}
         run: |
           sudo apt-get install pandoc
           # use package_version computed in step 'baipp'
