--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -3,7 +3,7 @@ name: Publish Github release
 on:
   push:
     tags:
-      - '*'
+      - "*.*.*"
   workflow_call:
     inputs:
       tag-name:
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v4
         if: github.event_name == 'push'
         with:
-          fetch-depth: 0
+          fetch-tags: true
           persist-credentials: false
 
       - name: Checkout
@@ -43,12 +43,34 @@ jobs:
           github.event_name == 'workflow_dispatch'
           || github.event_name == 'workflow_call'
         with:
-          fetch-depth: 0
+          fetch-tags: true
           ref: ${{ inputs.tag-name }}
-          persist-credentials: false
+          persist-credentials: true
 
-      - uses: hynek/build-and-inspect-python-package@v2
+      - name: Build dist
+        uses: hynek/build-and-inspect-python-package@v2
         id: baipp
+
+      - name: Install tox
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade tox
+
+      - name: Generate Release Notes
+        env:
+          RELEASE_VERSION: ${{ steps.baipp.outputs.package_version }}
+        run: |
+          sudo apt-get install pandoc
+          # use package_version computed in step 'baipp'
+          tox -e generate-gh-release-notes -- "$RELEASE_VERSION" scripts/latest-release-notes.md
+
+      - name: Upload release notes
+        uses: actions/upload-artifact@v4
+        with:
+          name: latest-release-notes
+          path: scripts/latest-release-notes.md
+          include-hidden-files: false
+          if-no-files-found: error
 
   github-release:
     name: Make a GitHub Release
@@ -67,9 +89,14 @@ jobs:
         with:
           name: Packages
           path: dist
+      - name: Download release notes
+        uses: actions/download-artifact@v4
+        with:
+          name: latest-release-notes
+          path: scripts/latest-release-notes.md
       - name: Publish GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           files: dist/*
-          generate_release_notes: true
+          body_path: scripts/latest-release-notes.md
           draft: true
