gha: remove tag-release trigger on PR merged

--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -1,9 +1,9 @@
 name: Tag release
 
 on:
-  pull_request:
-    types:
-      - closed
+  # pull_request:
+  #   types:
+  #     - closed
   workflow_dispatch:
     inputs:
       version:
