show all entries from towncrier

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -274,12 +274,12 @@ showcontent = true
 [[tool.towncrier.type]]
 directory = "doc"
 name = "Documentation"
-showcontent = false
+showcontent = true
 
 [[tool.towncrier.type]]
 directory = "misc"
 name = "Misc"
-showcontent = false
+showcontent = true
 
 
 # https://mypy.readthedocs.io/en/stable/config_file.html
