unfix click version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ dependencies = [
     "beautifulsoup4>=4.4.0",
     "defusedxml>=0.7.1",
     "chardet>=5.0",
-    "click>=8.3",
+    "click",
     "click-option-group>=0.5.6",
     "dogpile.cache>=1.0",
     "guessit>=3.0.0",
