--- a/tests/cassettes/omdb/test_get_title.yaml
+++ b/tests/cassettes/omdb/test_get_title.yaml
@@ -5,13 +5,13 @@ interactions:
       Accept:
       - '*/*'
       Accept-Encoding:
-      - gzip, deflate
+      - gzip, deflate, zstd
       Connection:
       - keep-alive
       User-Agent:
-      - Subliminal/2.2
+      - Subliminal/2.5
     method: GET
-    uri: https://www.omdbapi.com/?r=json&v=1&apikey=44d5b275&t=Man+of+Steel&plot=short
+    uri: https://www.omdbapi.com/?r=json&v=1&apikey=7a541ee4&t=Man+of+Steel&plot=short
   response:
     body:
       string: '{"Title":"Man of Steel","Year":"2013","Rated":"PG-13","Released":"14
@@ -20,40 +20,38 @@ interactions:
         Cavill, Amy Adams, Michael Shannon","Plot":"An alien child is evacuated from
         his dying world and sent to Earth to live among humans. His peace is threatened
         when other survivors of his home planet invade Earth.","Language":"English","Country":"United
-        States, United Kingdom","Awards":"Nominated for 1 BAFTA Award7 wins & 46 nominations
-        total","Poster":"https://m.media-amazon.com/images/M/MV5BMTk5ODk1NDkxMF5BMl5BanBnXkFtZTcwNTA5OTY0OQ@@._V1_SX300.jpg","Ratings":[{"Source":"Internet
-        Movie Database","Value":"7.1/10"},{"Source":"Rotten Tomatoes","Value":"57%"},{"Source":"Metacritic","Value":"55/100"}],"Metascore":"55","imdbRating":"7.1","imdbVotes":"828,023","imdbID":"tt0770828","Type":"movie","DVD":"N/A","BoxOffice":"$291,045,518","Production":"N/A","Website":"N/A","Response":"True"}'
+        States, United Kingdom, Canada","Awards":"Nominated for 1 BAFTA Award7 wins
+        & 46 nominations total","Poster":"https://m.media-amazon.com/images/M/MV5BMTk5ODk1NDkxMF5BMl5BanBnXkFtZTcwNTA5OTY0OQ@@._V1_SX300.jpg","Ratings":[{"Source":"Internet
+        Movie Database","Value":"7.1/10"},{"Source":"Rotten Tomatoes","Value":"57%"},{"Source":"Metacritic","Value":"55/100"}],"Metascore":"55","imdbRating":"7.1","imdbVotes":"858,780","imdbID":"tt0770828","Type":"movie","DVD":"N/A","BoxOffice":"$291,045,518","Production":"N/A","Website":"N/A","Response":"True"}'
     headers:
-      CF-Cache-Status:
-      - MISS
       CF-RAY:
-      - 91189a9e1c68ef0b-LHR
+      - 9cd036484d79691c-LIS
       Cache-Control:
-      - public, max-age=86400
+      - public, max-age=3600
       Connection:
       - keep-alive
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 13 Feb 2025 23:30:02 GMT
+      - Fri, 13 Feb 2026 00:29:32 GMT
       Server:
       - cloudflare
       Transfer-Encoding:
       - chunked
       access-control-allow-origin:
       - '*'
+      cf-cache-status:
+      - DYNAMIC
       content-length:
-      - '1024'
+      - '1032'
       expires:
-      - Fri, 14 Feb 2025 00:30:02 GMT
+      - Fri, 13 Feb 2026 01:29:32 GMT
       last-modified:
-      - Thu, 13 Feb 2025 23:30:02 GMT
+      - Fri, 13 Feb 2026 00:29:32 GMT
       vary:
-      - '*, Accept-Encoding'
+      - '*'
       x-aspnet-version:
       - 4.0.30319
-      x-powered-by:
-      - ASP.NET
     status:
       code: 200
       message: OK
