--- a/tests/cassettes/omdb/test_get_wrong_id.yaml
+++ b/tests/cassettes/omdb/test_get_wrong_id.yaml
@@ -5,47 +5,45 @@ interactions:
       Accept:
       - '*/*'
       Accept-Encoding:
-      - gzip, deflate
+      - gzip, deflate, zstd
       Connection:
       - keep-alive
       User-Agent:
-      - Subliminal/2.2
+      - Subliminal/2.5
     method: GET
-    uri: https://www.omdbapi.com/?r=json&v=1&apikey=44d5b275&i=tt9999999&plot=short
+    uri: https://www.omdbapi.com/?r=json&v=1&apikey=7a541ee4&i=tt9999999&plot=short
   response:
     body:
       string: '{"Response":"False","Error":"Error getting data."}'
     headers:
-      CF-Cache-Status:
-      - MISS
       CF-RAY:
-      - 91189a97a904ef1d-LHR
+      - 9cd036468ea9b2d1-LIS
       Cache-Control:
-      - public, max-age=86400
+      - public, max-age=3600
       Connection:
       - keep-alive
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 13 Feb 2025 23:30:02 GMT
+      - Fri, 13 Feb 2026 00:29:32 GMT
       Server:
       - cloudflare
       Transfer-Encoding:
       - chunked
       access-control-allow-origin:
       - '*'
+      cf-cache-status:
+      - DYNAMIC
       content-length:
       - '50'
       expires:
-      - Fri, 14 Feb 2025 00:30:01 GMT
+      - Fri, 13 Feb 2026 01:29:32 GMT
       last-modified:
-      - Thu, 13 Feb 2025 23:30:01 GMT
+      - Fri, 13 Feb 2026 00:29:32 GMT
       vary:
-      - '*, Accept-Encoding'
+      - '*'
       x-aspnet-version:
       - 4.0.30319
-      x-powered-by:
-      - ASP.NET
     status:
       code: 200
       message: OK
