--- a/tests/cassettes/omdb/test_search_page.yaml
+++ b/tests/cassettes/omdb/test_search_page.yaml
@@ -5,13 +5,13 @@ interactions:
       Accept:
       - '*/*'
       Accept-Encoding:
-      - gzip, deflate
+      - gzip, deflate, zstd
       Connection:
       - keep-alive
       User-Agent:
-      - Subliminal/2.2
+      - Subliminal/2.5
     method: GET
-    uri: https://www.omdbapi.com/?r=json&v=1&apikey=44d5b275&s=Man+of+Steel&page=3
+    uri: https://www.omdbapi.com/?r=json&v=1&apikey=7a541ee4&s=Man+of+Steel&page=3
   response:
     body:
       string: '{"Search":[{"Title":"Man of Steel ''Soldier of Steel''","Year":"2013","imdbID":"tt2911220","Type":"game","Poster":"N/A"},{"Title":"Man
@@ -25,36 +25,34 @@ interactions:
         of Discovery: Creating Man of Steel","Year":"2013","imdbID":"tt4160544","Type":"movie","Poster":"N/A"},{"Title":"The
         Sonic Landscape of ''Man of Steel''","Year":"2013","imdbID":"tt5312384","Type":"movie","Poster":"N/A"}],"totalResults":"32","Response":"True"}'
     headers:
-      CF-Cache-Status:
-      - MISS
       CF-RAY:
-      - 91189ab0d9fcedea-LHR
+      - 9cd036536dec8c92-LIS
       Cache-Control:
-      - public, max-age=86400
+      - public, max-age=3600
       Connection:
       - keep-alive
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 13 Feb 2025 23:30:06 GMT
+      - Fri, 13 Feb 2026 00:29:34 GMT
       Server:
       - cloudflare
       Transfer-Encoding:
       - chunked
       access-control-allow-origin:
       - '*'
+      cf-cache-status:
+      - DYNAMIC
       content-length:
       - '1199'
       expires:
-      - Fri, 14 Feb 2025 00:30:05 GMT
+      - Fri, 13 Feb 2026 01:29:34 GMT
       last-modified:
-      - Thu, 13 Feb 2025 23:30:05 GMT
+      - Fri, 13 Feb 2026 00:29:34 GMT
       vary:
-      - '*, Accept-Encoding'
+      - '*'
       x-aspnet-version:
       - 4.0.30319
-      x-powered-by:
-      - ASP.NET
     status:
       code: 200
       message: OK
