update pre-commit versions

--- a/.github/zizmor.yml
+++ b/.github/zizmor.yml
@@ -3,11 +3,6 @@ rules:
     ignore:
       - coverage.yaml:3:1
   unpinned-uses:
-    ignore:
-      - action.yaml
-      - CI.yaml
-      - coverage.yaml
-      - docker-build.yaml
-      - publish-release.yaml
-      - publish.yaml
-      - tag-release.yaml
+    config:
+      policies:
+        "*": ref-pin
