--- a/hatch.toml
+++ b/hatch.toml
@@ -53,7 +53,7 @@ description = "build and check documentation"
 dev-mode = false
 features = ["docs"]
 # Keep in sync with CI.yaml/docs, tox/docs and .readthedocs.yaml.
-python = "3.12"
+python = "3.13"
 
 [envs.docs.scripts]
 build = "sphinx-build -n -T -W --keep-going --color -b html docs docs/_build/html"
@@ -80,7 +80,7 @@ description = "Run the tests suite"
 features = ["tests"]
 
 [[envs.tests.matrix]]
-python = ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
+python = ["3.10", "3.11", "3.12", "3.13", "3.14"]
 
 [envs.tests.env-vars]
 COVERAGE_PROCESS_START = "pyproject.toml"
