--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dependencies = [
     "srt>=3.5",
     "stevedore>=3.0",
     "tomlkit>=0.13.2",
+    "typing_extension; python_version<='3.11'",
 ]
 
 # extras
